# minimal-fourier-neural-operator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
scripts/: download_data_darcy.py
src/minimal_fno/: __init__.py  generate.py  model.py
src/minimal_fourier_neural_operator/: generate.py  model.py
tests/: test_generate.py  test_model.py
