[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "minimal_fno"
authors = [{name = "Cyrille Praz", email = "cyrraz.code@protonmail.com"}]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
