[project]
name = "minimal-fourier-neural-operator"
version = "0.1.0"
description = "Implements a minimal Fourier Neural Operator (FNO)."
authors = [{name = "Cyrille Praz", email = "cyrraz.code@protonmail.com"}]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "lightning[extra]>=2.5.0.post0",
    "neuraloperator>=1.0.2",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
  "ARG",         # flake8-unused-arguments
  "B",           # flake8-bugbear
  "C4",          # flake8-comprehensions
  "EXE",         # flake8-executable
  "FURB",        # refurb
  "G",           # flake8-logging-format
  "I",           # isort
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PD",          # pandas-vet
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "PYI",         # flake8-pyi
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
